--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
     "@angular/service-worker": "~12.0.1",
+    "@capacitor/camera": "^1.0.3",
+    "@capacitor/filesystem": "^1.0.2",
+    "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.5.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
