refactor: refatoracao no componente de formulario para ser dinamico

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
+		"@angular-eslint/no-output-on-prefix":"off",
         "@angular-eslint/component-class-suffix": [
           "error",
           {
