--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
       ],
       "rules": {
 		"@angular-eslint/no-output-on-prefix":"off",
+		"@typescript-eslint/no-inferrable-types": "off",
         "@angular-eslint/component-class-suffix": [
           "error",
           {
