--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
       "rules": {
 		"@angular-eslint/no-output-on-prefix":"off",
 		"@typescript-eslint/no-inferrable-types": "off",
+		"@typescript-eslint/naming-convention": "off",
         "@angular-eslint/component-class-suffix": [
           "error",
           {
