--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --aot --configuration production",
+    "start": "node server.js",
+    "postinstall": "ng build --aot --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "12.19.0",
+    "npm": "6.14.8"
+  },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~12.0.1",
+    "@angular/cli": "~12.0.1",
     "@angular/common": "~12.0.1",
+    "@angular/compiler": "~12.0.1",
+    "@angular/compiler-cli": "~12.0.1",
     "@angular/core": "~12.0.1",
     "@angular/forms": "~12.0.1",
     "@angular/platform-browser": "~12.0.1",
@@ -31,9 +39,12 @@
     "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.5.2",
     "cordova-plugin-geolocation": "^4.1.0",
+    "express": "^4.17.1",
     "jwt-decode": "^3.1.2",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.2.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
