--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ng": "ng",
     "start": "node server.js",
     "postinstall": "ng build --aot --configuration production",
+	"deploy:heroku": "git push heroku master",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
