--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
+	"dev": "ng serve",
     "postinstall": "ng build --aot --configuration production",
-	"deploy:heroku": "git push heroku master",
+    "deploy:heroku": "git push heroku master",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -39,6 +40,7 @@
     "@capacitor/status-bar": "1.0.2",
     "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.5.2",
+    "@types/googlemaps": "^3.43.3",
     "cordova-plugin-geolocation": "^4.1.0",
     "express": "^4.17.1",
     "jwt-decode": "^3.1.2",
