--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-	"dev": "ng serve",
-    "postinstall": "ng build --aot --configuration production",
+    "dev": "ng serve",
     "deploy:heroku": "git push heroku master",
     "deploy:v1": "git push heroku v1:master",
     "test": "ng test",
@@ -33,13 +32,13 @@
     "@angular/service-worker": "~12.0.1",
     "@capacitor/app": "1.0.2",
     "@capacitor/camera": "^1.0.3",
-    "@capacitor/core": "3.1.1",
     "@capacitor/filesystem": "^1.0.2",
     "@capacitor/geolocation": "^1.0.2",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@capacitor/storage": "^1.0.3",
+    "@ionic-native/android-permissions": "^5.34.0",
     "@ionic/angular": "^5.5.2",
     "@types/googlemaps": "^3.43.3",
     "cordova-plugin-geolocation": "^4.1.0",
@@ -61,7 +60,6 @@
     "@angular/compiler": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "3.1.1",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
