--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "e2e": "ng e2e"
   },
   "engines": {
-    "node": "12.19.0",
-    "npm": "6.14.8"
+    "node": "^12.19.0",
+    "npm": "^6.14.8"
   },
   "private": true,
   "dependencies": {
