--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@types/googlemaps": "^3.43.3",
     "cordova-plugin-geolocation": "^4.1.0",
     "express": "^4.17.1",
+    "jspdf": "^2.4.0",
+    "jspdf-autotable": "^3.5.20",
     "jwt-decode": "^3.1.2",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
